_BACKUP/z_HTML-VERSIONS/version4/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/stack.md
<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">My Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Downloads &amp; Misc-Assets</span></a>

<a href="../../readme-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">README</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Abstract Data Structures</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Data Structures Overview</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Heap</span>

<a href="../../abstract-data-structures/untitled-1/string.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">String</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Map</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Set</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span>

<a href="../../abstract-data-structures/untitled-1/stack/stack-continued.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack Continued</span></a>

<a href="../../abstract-data-structures/untitled-1/stack/stack-part-3.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack Part 3</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">GCA Sprint Prep:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/intro-2-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro 2 Python</span></a>

<a href="../../resources/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Inheritance</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Strings</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/awesome-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Awesome Python</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../quick-reference/my-medium-articles.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">My Medium Articles</span></a>

<a href="../../quick-reference/free-python-books.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Free Python Books</span></a>

<a href="../../quick-reference/why-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">WHY Python?</span></a>

<a href="../../quick-reference/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python3-regex.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python3 Regex</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span>

<a href="../../quick-reference/creating-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Creating Python Modules</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Docs</span></span>

<a href="../../stdlib/touple.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Touple</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/conditionals-and-loops.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Conditionals and loops</span></a>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes and objects</span>

<a href="../../stdlib/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span>

<a href="../../stdlib/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Types</span></a>

<a href="../../stdlib/dictionaries-sets-files-and-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries, sets, files, and modules</span></a>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<a href="../../stdlib/values-expressions-and-statments.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Values Expressions &amp; Statments</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../misc/built-in-methods-and-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Methods &amp; Functions</span></a>

<a href="../../misc/math.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Math</span></a>

<a href="../../misc/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<a href="../../installations-setup-and-env/installing-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Installing Python Modules</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Stack</span>
==========================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<a href="../../abstract-data-structures/untitled-1/stack/stack-continued.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack Continued</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/stack/stack-continued</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b8298d80ef734df7b5e1ebcfcd1b1350"><span data-offset-key="b8298d80ef734df7b5e1ebcfcd1b1350:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # LIFO: last in first out​# create the abstract data typeclass Stack:​    def __init__(self):        # initialize it to a one dimensional array or linked list        self.stack = []​    """    Stack methods (push, pop, peek, is_empty, stack_size)    """​    # function for adding item into the stack O(1)    def push(self, data):        self.stack.append(data)​    # function for removing last item inserted O(1)    def pop(self):​        # first check to make sure its not an empty stack        if self.stack_size() < 1:            return -1​        # get the last item in the stack        data = self.stack[-1]        # remove it        del self.stack[-1]        # return the data        return data​    # function to return the last item in the stack without removing it O(1)    def peek(self):        return self.stack[-1]​    # function to check if the stack is empty O(1)    def is_empty(self):        return self.stack == []​    # function to return the size of the stack O(1)    def stack_size(self):        return len(self.stack)​​"""Using the methods"""stack = Stack()stack.push(1)stack.push(2)stack.push(3)print(f'Size: {stack.stack_size()}')print(f'Popped item: {stack.pop()}')print(f'Size: {stack.stack_size()}')print(f'Peeked item: {stack.peek()}')print(f'Size: {stack.stack_size()}')​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e05533e2a9214728bd76bfe15345e8e1"><span data-offset-key="e05533e2a9214728bd76bfe15345e8e1:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="ab77eb4848e149bcaf7c77163d0874e9"><span data-offset-key="ab77eb4848e149bcaf7c77163d0874e9:0">Stack</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="322c1e4e64d4432eb69810069bf30989"><span data-offset-key="322c1e4e64d4432eb69810069bf30989:0">Implementation of an interpreter for a small language that does multiplication/addition/etc.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="75acae6250974e1f8f5777ae646e1c0d"><span data-offset-key="75acae6250974e1f8f5777ae646e1c0d:0">Design a </span><span data-offset-key="75acae6250974e1f8f5777ae646e1c0d:1">`MinStack`</span><span data-offset-key="75acae6250974e1f8f5777ae646e1c0d:2"> data structure that supports a </span><span data-offset-key="75acae6250974e1f8f5777ae646e1c0d:3">`min()`</span><span data-offset-key="75acae6250974e1f8f5777ae646e1c0d:4"> operation that returns the minimum value in the stack in O(1) time.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1b1859fccd97476a8abd0d8e9c18d4ee"><span data-offset-key="1b1859fccd97476a8abd0d8e9c18d4ee:0">Write an algorithm to determine if all of the delimiters in an expression are matched and closed.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d0fe4e1de1cc447a9e3b581e7c02768f"><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:0">E.g. </span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:1">`{ac[bb]}`</span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:2">, </span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:3">`[dklf(df(kl))d]{}`</span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:4"> and </span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:5">`{[[[]]]}`</span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:6"> are matched. But </span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:7">`{3234[fd`</span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:8"> and </span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:9">`{df][d}`</span><span data-offset-key="d0fe4e1de1cc447a9e3b581e7c02768f:10"> are not.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1d26f56734ed43fc97c644135d33e19e"><span data-offset-key="1d26f56734ed43fc97c644135d33e19e:0"><span data-slate-zero-width="z">​</span></span></span><a href="http://blog.gainlo.co/index.php/2016/09/30/uber-interview-question-delimiter-matching/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="8f035bbe7d604025ab857d7df81773b3"><span data-offset-key="8f035bbe7d604025ab857d7df81773b3:0">Source</span></span></a><span data-key="602f0b4b3bdd4040b7f3da9a3d794197"><span data-offset-key="602f0b4b3bdd4040b7f3da9a3d794197:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="888cf1592c51404c9c2607f8b39630fa"><span data-offset-key="888cf1592c51404c9c2607f8b39630fa:0">Sort a stack in ascending order using an additional stack.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="1575f4a1f4fc46bbaaf6f7730f9e0da3"><span data-offset-key="1575f4a1f4fc46bbaaf6f7730f9e0da3:0">Stacks in Python</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="19557d883fe24e149bc329b3c6ed2719"><span data-offset-key="19557d883fe24e149bc329b3c6ed2719:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.educative.io/blog/data-structures-stack-queue-java-tutorial" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="bddbe0e3b906405da929ceb9e830c4ce"><span data-offset-key="bddbe0e3b906405da929ceb9e830c4ce:0">Stacks</span></span></a><span data-key="6810af30eee3420e8d87ab5fef3881dd"><span data-offset-key="6810af30eee3420e8d87ab5fef3881dd:0"> are a sequential data structure that act as the Last-in, First-out (LIFO) version of queues. The last element inserted in a stack is considered at the </span><span data-offset-key="6810af30eee3420e8d87ab5fef3881dd:1">**top of the stack**</span><span data-offset-key="6810af30eee3420e8d87ab5fef3881dd:2"> and is the only accessible element. To access a middle element, you must first remove enough elements to make the desired element the top of the stack.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cbfaf133d3c84cd1bee88d8c6c366a2b"><span data-offset-key="cbfaf133d3c84cd1bee88d8c6c366a2b:0">Many developers imagine stacks as a stack of dinner plates; you can add or remove plates to the top of the stack but must move the whole stack to place one at the bottom.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ea4dc73dadb64692906e55bb59cb2880"><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:0">Adding elements is known as a </span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:1">**push,**</span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:2"> and removing elements is known as a </span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:3">**pop**</span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:4">. You can implement stacks in Python using the built-in list structure. With list implementation, push operations use the </span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:5">`append()`</span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:6"> method, and pop operations use </span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:7">`pop()`</span><span data-offset-key="ea4dc73dadb64692906e55bb59cb2880:8">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="94a3ca2f3b87467eb657e826c0fbf600"><span data-offset-key="94a3ca2f3b87467eb657e826c0fbf600:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Stack Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Stack Javascript</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Stack Python</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="27f9ac97cee94e178c4a93fc53a61d4c"><span data-offset-key="27f9ac97cee94e178c4a93fc53a61d4c:0"><span data-slate-zero-width="n">​</span></span></span></span>

    stack = [] # append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c') print('Initial stack')print(stack) # pop() function to pop# element from stack in # LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop()) print('\nStack after elements are popped:')print(stack) 

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="e000f014a0784561a639d0def0cbe84b"><span data-offset-key="e000f014a0784561a639d0def0cbe84b:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Stack Javascript</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5851ebfee6ca4ea6a1de3c7f625177fe"><span data-offset-key="5851ebfee6ca4ea6a1de3c7f625177fe:0"><span data-slate-zero-width="n">​</span></span></span></span>

    //creates a stacklet stack = function(){   //two variables of the stack this.count = 0; //keeps track of the count of the stack  this.storage = {}; //empty object​​  //adding the  value on to the end of the stack  this.push = function(value){    this.storage[this.count] = value;    this.count++;  }​  //removes and returns the value at the end of the stack  this.pop = function(){    if(this.count === 0){      return undefined;    }      this.count--;      const result = this.storage[this.count];      //removes the top element and returns it      delete this.storage[this.count];      return result;  }​  //to know the size of the stack  this.size = function(){    return this.count;  }​  //peek() - returns the value top of the stack i.e which is at the end of the stack  this.peek = function(){    return this.storage[this.count-1];   }}let myStack = new stack();​myStack.push(1);myStack.push(2);console.log(myStack.peek());console.log(myStack.pop());console.log(myStack.peek());

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="87400f0d19024976a6c2c84f9b668415"><span data-offset-key="87400f0d19024976a6c2c84f9b668415:0">**Advantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e8de598d0a2b4b69841f874416bf4ba9"><span data-offset-key="e8de598d0a2b4b69841f874416bf4ba9:0">Offers LIFO data management that’s impossible with arrays</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fd61ac950a3a4bedbc77d52286abe861"><span data-offset-key="fd61ac950a3a4bedbc77d52286abe861:0">Automatic scaling and object cleanup</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a384e82649704049af5095201556f5b4"><span data-offset-key="a384e82649704049af5095201556f5b4:0">Simple and reliable data storage system</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="82d301a409fe44878c9b41d301b87ae3"><span data-offset-key="82d301a409fe44878c9b41d301b87ae3:0">**Disadvantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="26da2d167bdc47f791e039863b09088a"><span data-offset-key="26da2d167bdc47f791e039863b09088a:0">Stack memory is limited</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="59447fa09a3a4b4dbf9b1b7c594b0bc6"><span data-offset-key="59447fa09a3a4b4dbf9b1b7c594b0bc6:0">Too many objects on the stack leads to a stack overflow error</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dd0ba9f7b49c4a62bbb1958d5a9b806f"><span data-offset-key="dd0ba9f7b49c4a62bbb1958d5a9b806f:0">**Applications:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="254325884f1948738a9a3e7a113b75e7"><span data-offset-key="254325884f1948738a9a3e7a113b75e7:0">Used for making highly reactive systems</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d40948738f3042fb9159ec2ca842d7bc"><span data-offset-key="d40948738f3042fb9159ec2ca842d7bc:0">Memory management systems use stacks to handle the most recent requests first</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1b45275b6d7049238ed84b6cca09b357"><span data-offset-key="1b45275b6d7049238ed84b6cca09b357:0">Helpful for questions like parenthesis matching</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="ea6e67e035b2450888a80f2f4dc7e4f6"><span data-offset-key="ea6e67e035b2450888a80f2f4dc7e4f6:0">Common stacks interview questions in Python</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0d317a9f514947698aed56d8fe50d75b"><span data-offset-key="0d317a9f514947698aed56d8fe50d75b:0">Implement a queue using stacks</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8d058d40dcc441d484ea43a17426c941"><span data-offset-key="8d058d40dcc441d484ea43a17426c941:0">Evaluate a Postfix expression with a stack</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bff57a7854a94dec80bea98a94958256"><span data-offset-key="bff57a7854a94dec80bea98a94958256:0">Next greatest element using a stack</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f52777a24d544636b782536614af2e4a"><span data-offset-key="f52777a24d544636b782536614af2e4a:0">Create a </span><span data-offset-key="f52777a24d544636b782536614af2e4a:1">`min()`</span><span data-offset-key="f52777a24d544636b782536614af2e4a:2"> function using a stack</span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="a7e4667b42d143029593d2dbc9dbf83b"><span data-offset-key="a7e4667b42d143029593d2dbc9dbf83b:0">Stack in Python </span></span></span>

> <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="39d5338057824378a9126bdc5feaa364"><span data-offset-key="39d5338057824378a9126bdc5feaa364:0">A Computer Science portal for geeks. It contains well written, well thought and well explained computer science and programming articles, quizzes and practice/competitive programming/company interview Questions.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0dc20bc6a8e3473c89704d979a26c69a"><span data-offset-key="0dc20bc6a8e3473c89704d979a26c69a:0">A stack is a linear data structure that stores items in a Last-In/First-Out (LIFO) or First-In/Last-Out (FILO) manner. In stack, a new element is added at one end and an element is removed from that end only. The insert and delete operations are often called push and pop.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7c1db8bd1d9641fb95cab44f49c14f94"><span data-offset-key="7c1db8bd1d9641fb95cab44f49c14f94:0">The functions associated with stack are:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="047ebbb8980348509a8444286372d5b7"><span data-offset-key="047ebbb8980348509a8444286372d5b7:0">**empty()**</span><span data-offset-key="047ebbb8980348509a8444286372d5b7:1"> – Returns whether the stack is empty – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f4346c8d7f1549f0ac98ca730708482b"><span data-offset-key="f4346c8d7f1549f0ac98ca730708482b:0">**size()**</span><span data-offset-key="f4346c8d7f1549f0ac98ca730708482b:1"> – Returns the size of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8c04f3924fe44507a50ea65a1e985a99"><span data-offset-key="8c04f3924fe44507a50ea65a1e985a99:0">**top()**</span><span data-offset-key="8c04f3924fe44507a50ea65a1e985a99:1"> – Returns a reference to the topmost element of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5c7f76533cda41a1be42148532341c60"><span data-offset-key="5c7f76533cda41a1be42148532341c60:0">**push(a)**</span><span data-offset-key="5c7f76533cda41a1be42148532341c60:1"> – Inserts the element ‘a’ at the top of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9a213ffb2f7547dbbf52c10b66291c9a"><span data-offset-key="9a213ffb2f7547dbbf52c10b66291c9a:0">**pop()**</span><span data-offset-key="9a213ffb2f7547dbbf52c10b66291c9a:1"> – Deletes the topmost element of the stack – Time Complexity: O(1)</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="20a83d7fc9dc4616b649594d42b7e108"><span data-offset-key="20a83d7fc9dc4616b649594d42b7e108:0">Implementation</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="81ddfe9a8e9b44f7ba45225cdcd887d4"><span data-offset-key="81ddfe9a8e9b44f7ba45225cdcd887d4:0">There are various ways from which a stack can be implemented in Python. This article covers the implementation of a stack using data structures and modules from the Python library. Stack in Python can be implemented using the following ways:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="439c97e4d0fb47008fdfe6f2e4a2f2c9"><span data-offset-key="439c97e4d0fb47008fdfe6f2e4a2f2c9:0">list</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d640402889e2490ea2ed7b48dabca66d"><span data-offset-key="d640402889e2490ea2ed7b48dabca66d:0">Collections.deque</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="199da7580aec48afbb7e316dddf92684"><span data-offset-key="199da7580aec48afbb7e316dddf92684:0">queue.LifoQueue</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="19d6e75de47044dda7d350b4e9f6057f"><span data-offset-key="19d6e75de47044dda7d350b4e9f6057f:0">Implementation using list:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cf70ea82532144999240b0aff1c57dae"><span data-offset-key="cf70ea82532144999240b0aff1c57dae:0">Python’s built-in data structure list can be used as a stack. Instead of push(), append() is used to add elements to the top of the stack while pop() removes the element in LIFO order. Unfortunately, the list has a few shortcomings. The biggest issue is that it can run into speed issues as it grows. The items in the list are stored next to each other in memory, if the stack grows bigger than the block of memory that currently holds it, then Python needs to do some memory allocations. This can lead to some append() calls taking much longer than other ones.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3e5385ba0a3749fd9ba348156184316c"><span data-offset-key="3e5385ba0a3749fd9ba348156184316c:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="171c9a126f584443ae109c8a1a31ba08"><span data-offset-key="171c9a126f584443ae109c8a1a31ba08:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to# demonstrate stack implementation# using list​​stack = []​# append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c')​print('Initial stack')print(stack)​# pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop())​print('\nStack after elements are popped:')print(stack)​# uncommenting print(stack.pop())# will cause an IndexError# as the stack is now empty​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8a1e7230237b4498a933a5a4c79c534a"><span data-offset-key="8a1e7230237b4498a933a5a4c79c534a:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="88e6ca60e5594e55aa6b00a16f949ccd"><span data-offset-key="88e6ca60e5594e55aa6b00a16f949ccd:0">Initial stack \['a', 'b', 'c'\]</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fb1fba2d231f47b186de0deaf79ca2e2"><span data-offset-key="fb1fba2d231f47b186de0deaf79ca2e2:0">Elements popped from stack: c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6909b6b45ff14d67bb02bc62f46ad8b7"><span data-offset-key="6909b6b45ff14d67bb02bc62f46ad8b7:0">Stack after elements are popped: \[\]</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9ada3f45155d43d58e29c7274d336baa"><span data-offset-key="9ada3f45155d43d58e29c7274d336baa:0">Traceback (most recent call last): File "/home/2426bc32be6a59881fde0eec91247623.py", line 25, in print(stack.pop()) IndexError: pop from empty list</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="b81964afe599437688add81ecfed58e1"><span data-offset-key="b81964afe599437688add81ecfed58e1:0">Implementation using collections.deque:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b48bb57427c440a0acbf8ee9dd339931"><span data-offset-key="b48bb57427c440a0acbf8ee9dd339931:0">Python stack can be implemented using the deque class from the collections module. Deque is preferred over the list in the cases where we need quicker append and pop operations from both the ends of the container, as deque provides an O(1) time complexity for append and pop operations as compared to list which provides O(n) time complexity. The same methods on deque as seen in the list are used, append() and pop().</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7128b148647a4a1583e88e2eac405098"><span data-offset-key="7128b148647a4a1583e88e2eac405098:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7c1483aa5e4f4c28b8a9be40759ba1e0"><span data-offset-key="7c1483aa5e4f4c28b8a9be40759ba1e0:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to# demonstrate stack implementation# using collections.deque  from Collections import deque stack = deque() # append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c') print('Initial stack:')print(stack) # pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop()) print('\nStack after elements are popped:')print(stack) # uncommenting print(stack.pop()) # will cause an IndexError# as the stack is now empty

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c22451ac7cfe4d45a20b340b60ae0fa7"><span data-offset-key="c22451ac7cfe4d45a20b340b60ae0fa7:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a7aa91594084479f8b32b89f879813e8"><span data-offset-key="a7aa91594084479f8b32b89f879813e8:0">Initial stack: deque(\['a', 'b', 'c'\])</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ec68ac15959647d4bee523f190414b61"><span data-offset-key="ec68ac15959647d4bee523f190414b61:0">Elements popped from stack: c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="125cc3aef6ac4dea861f7cb6566f761f"><span data-offset-key="125cc3aef6ac4dea861f7cb6566f761f:0">Stack after elements are popped: deque(\[\])</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2e1f58520c6a42b2a569c0788a682fdb"><span data-offset-key="2e1f58520c6a42b2a569c0788a682fdb:0">Traceback (most recent call last): File "/home/97171a8f6fead6988ea96f86e4b01c32.py", line 29, in print(stack.pop()) IndexError: pop from an empty deque</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="fa879894fa70452d922b9730d2ec6755"><span data-offset-key="fa879894fa70452d922b9730d2ec6755:0">Implementation using queue module</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6abe5eb9744b45c88c7a670e742f50ac"><span data-offset-key="6abe5eb9744b45c88c7a670e742f50ac:0">Queue module also has a LIFO Queue, which is basically a Stack. Data is inserted into Queue using the put() function and get() takes data out from the Queue.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="68e1c80d68d8459683fff4a2e10e26b5"><span data-offset-key="68e1c80d68d8459683fff4a2e10e26b5:0">There are various functions available in this module:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="39d7d2bfe8b849cba0604b45fbaff3c5"><span data-offset-key="39d7d2bfe8b849cba0604b45fbaff3c5:0">**maxsize**</span><span data-offset-key="39d7d2bfe8b849cba0604b45fbaff3c5:1"> – Number of items allowed in the queue.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="65ee142eae354fd6a75bda56b4cd9ad8"><span data-offset-key="65ee142eae354fd6a75bda56b4cd9ad8:0">**empty()**</span><span data-offset-key="65ee142eae354fd6a75bda56b4cd9ad8:1"> – Return True if the queue is empty, False otherwise.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4d363ed230f64cbcb1fdf39d50dad878"><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:0">**full()**</span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:1"> – Return True if there are </span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:2">*maxsize*</span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:3"> items in the queue. If the queue was initialized with maxsize=0 (the default), then full() never returns True.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="866af51db4574d06a7d65db33580d317"><span data-offset-key="866af51db4574d06a7d65db33580d317:0">**get()**</span><span data-offset-key="866af51db4574d06a7d65db33580d317:1"> – Remove and return an item from the queue. If the queue is empty, wait until an item is available.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6b3446febc584551a8f443bbd7ce5769"><span data-offset-key="6b3446febc584551a8f443bbd7ce5769:0">**get\_nowait()**</span><span data-offset-key="6b3446febc584551a8f443bbd7ce5769:1"> – Return an item if one is immediately available, else raise QueueEmpty.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="469e07249aa24b0aac9298d1a7e271f1"><span data-offset-key="469e07249aa24b0aac9298d1a7e271f1:0">**put(item)**</span><span data-offset-key="469e07249aa24b0aac9298d1a7e271f1:1"> – Put an item into the queue. If the queue is full, wait until a free slot is available before adding the item.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a7fb5c8b0aff4798af512178d4ff5791"><span data-offset-key="a7fb5c8b0aff4798af512178d4ff5791:0">**put\_nowait(item)**</span><span data-offset-key="a7fb5c8b0aff4798af512178d4ff5791:1"> – Put an item into the queue without blocking.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="765fd37eda6245cea17e18624035b2fb"><span data-offset-key="765fd37eda6245cea17e18624035b2fb:0">**qsize()**</span><span data-offset-key="765fd37eda6245cea17e18624035b2fb:1"> – Return the number of items in the queue. If no free slot is immediately available, raise QueueFull.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c310f45a4aa14b708bb2d465d520860d"><span data-offset-key="c310f45a4aa14b708bb2d465d520860d:0">Python3</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="5884e6d55bab48889c84f386926664e9"><span data-offset-key="5884e6d55bab48889c84f386926664e9:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0fa5517da488456fba6e9fd451f48e8c"><span data-offset-key="0fa5517da488456fba6e9fd451f48e8c:0">`​`</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b70828a85a084f27a4af470086684044"><span data-offset-key="b70828a85a084f27a4af470086684044:0">`​`</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1abd9c2c28964d6d96b71e2bced4b814"><span data-offset-key="1abd9c2c28964d6d96b71e2bced4b814:0">`​`</span></span></span>

    # Python program to# demonstrate stack implementation# using queue module  from queue import LifoQueue # Initializing a stackstack = LifoQueue(maxsize = 3) # qsize() show the number of elements# in the stackprint(stack.qsize())  # put() function to push# element in the stackstack.put('a')stack.put('b')stack.put('c') print("Full: ", stack.full())print("Size: ", stack.qsize()) # get() function to pop# element from stack in# LIFO orderprint('\nElements popped from the stack')print(stack.get())print(stack.get())print(stack.get()) print("\nEmpty: ", stack.empty())

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7823b2c542e3448fbd5638b157e7f252"><span data-offset-key="7823b2c542e3448fbd5638b157e7f252:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="eb75e49185f441cb8649e25442612d6b"><span data-offset-key="eb75e49185f441cb8649e25442612d6b:0">0 Full: True Size: 3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3b3f2fca164a4ec1a9009e06d434d3e3"><span data-offset-key="3b3f2fca164a4ec1a9009e06d434d3e3:0">Elements popped from the stack c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dc84d060a96149e4bde3e38afc2fb5af"><span data-offset-key="dc84d060a96149e4bde3e38afc2fb5af:0">Empty: True</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="51b83db63f2b4b57bd42942cc90f4d63"><span data-offset-key="51b83db63f2b4b57bd42942cc90f4d63:0">Implementation using singly linked list:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9625555d043241568281fcff198ffdec"><span data-offset-key="9625555d043241568281fcff198ffdec:0">The linked list has two methods addHead(item) and removeHead() that run in constant time. These two methods are suitable to implement a stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a083f97d0fb844b2a1ee69dff495b816"><span data-offset-key="a083f97d0fb844b2a1ee69dff495b816:0">**getSize()**</span><span data-offset-key="a083f97d0fb844b2a1ee69dff495b816:1">– Get the number of items in the stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f167a5966afe4c1ebde8f2a2a07af34a"><span data-offset-key="f167a5966afe4c1ebde8f2a2a07af34a:0">**isEmpty()**</span><span data-offset-key="f167a5966afe4c1ebde8f2a2a07af34a:1"> – Return True if the stack is empty, False otherwise.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8de8bad570e34fd1bb283f4beaacb88a"><span data-offset-key="8de8bad570e34fd1bb283f4beaacb88a:0">**peek()**</span><span data-offset-key="8de8bad570e34fd1bb283f4beaacb88a:1"> – Return the top item in the stack. If the stack is empty, raise an exception.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="537f06c197fe41e09ccd56b7c31fc480"><span data-offset-key="537f06c197fe41e09ccd56b7c31fc480:0">**push(value)**</span><span data-offset-key="537f06c197fe41e09ccd56b7c31fc480:1"> – Push a value into the head of the stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="53bfb0961b69400680b8435a5a23526c"><span data-offset-key="53bfb0961b69400680b8435a5a23526c:0">**pop()**</span><span data-offset-key="53bfb0961b69400680b8435a5a23526c:1"> – Remove and return a value in the head of the stack. If the stack is empty, raise an exception.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f5adb0c4280a4818bfb2c5af3c5c5a09"><span data-offset-key="f5adb0c4280a4818bfb2c5af3c5c5a09:0">Below is the implementation of the above approach:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="582c0855c8b04e228299ade258261900"><span data-offset-key="582c0855c8b04e228299ade258261900:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e43012d3f5c04f77b6b2e9268c7a9412"><span data-offset-key="e43012d3f5c04f77b6b2e9268c7a9412:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a8ae75d7db8f4f62b3194db4798e3ee1"><span data-offset-key="a8ae75d7db8f4f62b3194db4798e3ee1:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to demonstrate# stack implementation using a linked list.# node classclass Node:   def __init__(self, value):      self.value = value      self.next = None class Stack:       # Initializing a stack.   # Use a dummy node, which is   # easier for handling edge cases.   def __init__(self):      self.head = Node("head")      self.size = 0    # String representation of the stack   def __str__(self):      cur = self.head.next      out = ""      while cur:         out += str(cur.value) + "->"         cur = cur.next      return out[:-3]      # Get the current size of the stack   def getSize(self):      return self.size       # Check if the stack is empty   def isEmpty(self):      return self.size == 0       # Get the top item of the stack   def peek(self):             # Sanitary check to see if we      # are peeking an empty stack.      if self.isEmpty():         raise Exception("Peeking from an empty stack")      return self.head.next.value    # Push a value into the stack.   def push(self, value):      node = Node(value)      node.next = self.head.next      self.head.next = node      self.size += 1         # Remove a value from the stack and return.   def pop(self):      if self.isEmpty():         raise Exception("Popping from an empty stack")      remove = self.head.next      self.head.next = self.head.next.next      self.size -= 1      return remove.value # Driver Codeif __name__ == "__main__":   stack = Stack()   for i in range(1, 11):      stack.push(i)   print(f"Stack: {stack}")    for _ in range(1, 6):      remove = stack.pop()      print(f"Pop: {remove}")   print(f"Stack: {stack}")

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="af01a704c22d490eab71a54e1d60b9af"><span data-offset-key="af01a704c22d490eab71a54e1d60b9af:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1a0f0c08fe9549d68c022e8740a248b2"><span data-offset-key="1a0f0c08fe9549d68c022e8740a248b2:0">Stack: 10 -&gt; 9 -&gt; 8 -&gt; 7 -&gt; 6 -&gt; 5 -&gt; 4 -&gt; 3 -&gt; 2 -&gt; 1</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1a849dea33df40af8ec6afe7730bb227"><span data-offset-key="1a849dea33df40af8ec6afe7730bb227:0">Pop: 10 Pop: 9 Pop: 8 Pop: 7 Pop: 6</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="224be898f92b4b608be40e90ee1850b8"><span data-offset-key="224be898f92b4b608be40e90ee1850b8:0">Stack: 5 -&gt; 4 -&gt; 3 -&gt; 2 -&gt; 1</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c41a6df2c35f4254b2eae4f387fd2fdb"><span data-offset-key="c41a6df2c35f4254b2eae4f387fd2fdb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4cc274268d434fdeb630bba15dd4b764"><span data-offset-key="4cc274268d434fdeb630bba15dd4b764:0"><span data-slate-zero-width="n">​</span></span></span></span>

    ​# Python program to# demonstrate stack implementation# using list  stack = [] # append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c') print('Initial stack')print(stack) # pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop()) print('\nStack after elements are popped:')print(stack) # uncommenting print(stack.pop()) # will cause an IndexError# as the stack is now empty

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6584ea844cc444c4ae27bfbfc4a1e4ec"><span data-offset-key="6584ea844cc444c4ae27bfbfc4a1e4ec:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="../../abstract-data-structures/untitled-1/array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Array</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/array</span>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Home</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/</span>

<a href="../../abstract-data-structures/untitled-1/tree/binary-search-tree.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Binary Search Tree</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/tree/binary-search-tree</span>

<a href="../../abstract-data-structures/untitled-1/untitled-4.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Linked List</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-4</span>

<a href="array/extra-array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Extra-Array</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/array/extra-array</span>

<a href="stack.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/stack</span>

<a href="binary-tree.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Binary Tree</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/tree/binary-tree</span>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Home</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/</span>

<a href="../../abstract-data-structures/untitled-1/untitled-6.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Recursion</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-6</span>

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hash Table</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-5</span>

<a href="untitled-2.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Searching</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-2</span>

<a href="../../abstract-data-structures/untitled-1/untitled-3.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Sorting</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-3</span>

<a href="queue-sandbox.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Queue Sandbox</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/queue/queue-sandbox</span>

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hash Table</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-5</span>

<a href="untitled-4/double-linked-list.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Double Linked List</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-4/double-linked-list</span>

<a href="untitled-1.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Graphs</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-1</span>

<a href="untitled.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Exotic</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled</span>

<a href="../../abstract-data-structures/untitled-1/heap.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Heap</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/heap</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="212df4e545134b9487c82b02a79bb1a0"><span data-offset-key="212df4e545134b9487c82b02a79bb1a0:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="untitled-3/insertion-sort.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Insertion Sort</span>

<a href="../../abstract-data-structures/untitled-1/stack/stack-continued.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack Continued</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 9 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/abstract-data-structures/untitled-1/stack/README.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="stack.html#stack" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Stack</span></span>

<a href="stack.html#stacks-in-python" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Stacks in Python</span></span>

<a href="stack.html#stack-in-python" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Stack in Python </span></span>

<a href="stack.html#implementation" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Implementation</span></span>

<a href="stack.html#python3" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Python3</span></span>
